// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Appeal Timetables should render "Timetable due dates" page for S78 appeal type and status lpa_questionnaire 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Timetable due dates</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full"></div>
    </div>
    <form method="post" novalidate="novalidate">
        <div class="govuk-form-group">
            <fieldset class="govuk-fieldset" role="group" aria-describedby="lpa-questionnaire-due-date-hint">
                <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">LPA questionnaire due</legend>
                <div id="lpa-questionnaire-due-date-hint"
                class="govuk-hint">For example, 27 3 2007</div>
                <div class="govuk-date-input" id="lpa-questionnaire-due-date">
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="lpa-questionnaire-due-date-day">Day</label>
                            <input class="govuk-input govuk-date-input__input govuk-input--width-2"
                            id="lpa-questionnaire-due-date-day" name="lpa-questionnaire-due-date-day"
                            type="text" inputmode="numeric">
                        </div>
                    </div>
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="lpa-questionnaire-due-date-month">Month</label>
                            <input class="govuk-input govuk-date-input__input govuk-input--width-2"
                            id="lpa-questionnaire-due-date-month" name="lpa-questionnaire-due-date-month"
                            type="text" inputmode="numeric">
                        </div>
                    </div>
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="lpa-questionnaire-due-date-year">Year</label>
                            <input class="govuk-input govuk-date-input__input govuk-input--width-4"
                            id="lpa-questionnaire-due-date-year" name="lpa-questionnaire-due-date-year"
                            type="text" inputmode="numeric">
                        </div>
                    </div>
                </div>
            </fieldset>
        </div>
        <div class="govuk-form-group">
            <fieldset class="govuk-fieldset" role="group" aria-describedby="lpa-statement-due-date-hint">
                <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">Statements due</legend>
                <div id="lpa-statement-due-date-hint" class="govuk-hint">For example, 27 3 2007</div>
                <div class="govuk-date-input" id="lpa-statement-due-date">
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="lpa-statement-due-date-day">Day</label>
                            <input class="govuk-input govuk-date-input__input govuk-input--width-2"
                            id="lpa-statement-due-date-day" name="lpa-statement-due-date-day" type="text"
                            inputmode="numeric">
                        </div>
                    </div>
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="lpa-statement-due-date-month">Month</label>
                            <input class="govuk-input govuk-date-input__input govuk-input--width-2"
                            id="lpa-statement-due-date-month" name="lpa-statement-due-date-month" type="text"
                            inputmode="numeric">
                        </div>
                    </div>
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="lpa-statement-due-date-year">Year</label>
                            <input class="govuk-input govuk-date-input__input govuk-input--width-4"
                            id="lpa-statement-due-date-year" name="lpa-statement-due-date-year" type="text"
                            inputmode="numeric">
                        </div>
                    </div>
                </div>
            </fieldset>
        </div>
        <div class="govuk-form-group">
            <fieldset class="govuk-fieldset" role="group" aria-describedby="ip-comments-due-date-hint">
                <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">Interested party comments due</legend>
                <div id="ip-comments-due-date-hint"
                class="govuk-hint">For example, 27 3 2007</div>
                <div class="govuk-date-input" id="ip-comments-due-date">
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="ip-comments-due-date-day">Day</label>
                            <input class="govuk-input govuk-date-input__input govuk-input--width-2"
                            id="ip-comments-due-date-day" name="ip-comments-due-date-day" type="text"
                            inputmode="numeric">
                        </div>
                    </div>
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="ip-comments-due-date-month">Month</label>
                            <input class="govuk-input govuk-date-input__input govuk-input--width-2"
                            id="ip-comments-due-date-month" name="ip-comments-due-date-month" type="text"
                            inputmode="numeric">
                        </div>
                    </div>
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="ip-comments-due-date-year">Year</label>
                            <input class="govuk-input govuk-date-input__input govuk-input--width-4"
                            id="ip-comments-due-date-year" name="ip-comments-due-date-year" type="text"
                            inputmode="numeric">
                        </div>
                    </div>
                </div>
            </fieldset>
        </div>
        <div class="govuk-form-group">
            <fieldset class="govuk-fieldset" role="group" aria-describedby="final-comments-due-date-hint">
                <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">Final comments due</legend>
                <div id="final-comments-due-date-hint" class="govuk-hint">For example, 27 3 2007</div>
                <div class="govuk-date-input" id="final-comments-due-date">
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="final-comments-due-date-day">Day</label>
                            <input class="govuk-input govuk-date-input__input govuk-input--width-2"
                            id="final-comments-due-date-day" name="final-comments-due-date-day" type="text"
                            inputmode="numeric">
                        </div>
                    </div>
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="final-comments-due-date-month">Month</label>
                            <input class="govuk-input govuk-date-input__input govuk-input--width-2"
                            id="final-comments-due-date-month" name="final-comments-due-date-month"
                            type="text" inputmode="numeric">
                        </div>
                    </div>
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="final-comments-due-date-year">Year</label>
                            <input class="govuk-input govuk-date-input__input govuk-input--width-4"
                            id="final-comments-due-date-year" name="final-comments-due-date-year" type="text"
                            inputmode="numeric">
                        </div>
                    </div>
                </div>
            </fieldset>
        </div>
        <div class="govuk-button-group">
            <button type="submit" class="govuk-button" data-module="govuk-button">Continue</button>
        </div>
    </form>
</main>"
`;

exports[`Appeal Timetables should render "Timetable due dates" page for householder appeal type 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full"></div>
    </div>
    <form method="post" novalidate="novalidate">
        <div class="govuk-form-group">
            <fieldset class="govuk-fieldset" role="group" aria-describedby="lpa-questionnaire-due-date-hint">
                <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
                    <h1 class="govuk-fieldset__heading"> LPA questionnaire due</h1>
                </legend>
                <div id="lpa-questionnaire-due-date-hint" class="govuk-hint">For example, 27 3 2007</div>
                <div class="govuk-date-input" id="lpa-questionnaire-due-date">
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="lpa-questionnaire-due-date-day">Day</label>
                            <input class="govuk-input govuk-date-input__input govuk-input--width-2"
                            id="lpa-questionnaire-due-date-day" name="lpa-questionnaire-due-date-day"
                            type="text" inputmode="numeric">
                        </div>
                    </div>
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="lpa-questionnaire-due-date-month">Month</label>
                            <input class="govuk-input govuk-date-input__input govuk-input--width-2"
                            id="lpa-questionnaire-due-date-month" name="lpa-questionnaire-due-date-month"
                            type="text" inputmode="numeric">
                        </div>
                    </div>
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="lpa-questionnaire-due-date-year">Year</label>
                            <input class="govuk-input govuk-date-input__input govuk-input--width-4"
                            id="lpa-questionnaire-due-date-year" name="lpa-questionnaire-due-date-year"
                            type="text" inputmode="numeric">
                        </div>
                    </div>
                </div>
            </fieldset>
        </div>
        <div class="govuk-button-group">
            <button type="submit" class="govuk-button" data-module="govuk-button">Continue</button>
        </div>
    </form>
</main>"
`;

exports[`Appeal Timetables should render correct "Timetable due dates" page for S78 appeal type and status final_comments 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full"></div>
    </div>
    <form method="post" novalidate="novalidate">
        <div class="govuk-form-group">
            <fieldset class="govuk-fieldset" role="group" aria-describedby="final-comments-due-date-hint">
                <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
                    <h1 class="govuk-fieldset__heading"> Final comments due</h1>
                </legend>
                <div id="final-comments-due-date-hint" class="govuk-hint">For example, 27 3 2007</div>
                <div class="govuk-date-input" id="final-comments-due-date">
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="final-comments-due-date-day">Day</label>
                            <input class="govuk-input govuk-date-input__input govuk-input--width-2"
                            id="final-comments-due-date-day" name="final-comments-due-date-day" type="text"
                            inputmode="numeric">
                        </div>
                    </div>
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="final-comments-due-date-month">Month</label>
                            <input class="govuk-input govuk-date-input__input govuk-input--width-2"
                            id="final-comments-due-date-month" name="final-comments-due-date-month"
                            type="text" inputmode="numeric">
                        </div>
                    </div>
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="final-comments-due-date-year">Year</label>
                            <input class="govuk-input govuk-date-input__input govuk-input--width-4"
                            id="final-comments-due-date-year" name="final-comments-due-date-year" type="text"
                            inputmode="numeric">
                        </div>
                    </div>
                </div>
            </fieldset>
        </div>
        <div class="govuk-button-group">
            <button type="submit" class="govuk-button" data-module="govuk-button">Continue</button>
        </div>
    </form>
</main>"
`;

exports[`Appeal Timetables should render correct "Timetable due dates" page for S78 appeal type and status lpa_questionnaire 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Timetable due dates</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full"></div>
    </div>
    <form method="post" novalidate="novalidate">
        <div class="govuk-form-group">
            <fieldset class="govuk-fieldset" role="group" aria-describedby="lpa-questionnaire-due-date-hint">
                <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">LPA questionnaire due</legend>
                <div id="lpa-questionnaire-due-date-hint"
                class="govuk-hint">For example, 27 3 2007</div>
                <div class="govuk-date-input" id="lpa-questionnaire-due-date">
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="lpa-questionnaire-due-date-day">Day</label>
                            <input class="govuk-input govuk-date-input__input govuk-input--width-2"
                            id="lpa-questionnaire-due-date-day" name="lpa-questionnaire-due-date-day"
                            type="text" inputmode="numeric">
                        </div>
                    </div>
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="lpa-questionnaire-due-date-month">Month</label>
                            <input class="govuk-input govuk-date-input__input govuk-input--width-2"
                            id="lpa-questionnaire-due-date-month" name="lpa-questionnaire-due-date-month"
                            type="text" inputmode="numeric">
                        </div>
                    </div>
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="lpa-questionnaire-due-date-year">Year</label>
                            <input class="govuk-input govuk-date-input__input govuk-input--width-4"
                            id="lpa-questionnaire-due-date-year" name="lpa-questionnaire-due-date-year"
                            type="text" inputmode="numeric">
                        </div>
                    </div>
                </div>
            </fieldset>
        </div>
        <div class="govuk-form-group">
            <fieldset class="govuk-fieldset" role="group" aria-describedby="lpa-statement-due-date-hint">
                <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">Statements due</legend>
                <div id="lpa-statement-due-date-hint" class="govuk-hint">For example, 27 3 2007</div>
                <div class="govuk-date-input" id="lpa-statement-due-date">
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="lpa-statement-due-date-day">Day</label>
                            <input class="govuk-input govuk-date-input__input govuk-input--width-2"
                            id="lpa-statement-due-date-day" name="lpa-statement-due-date-day" type="text"
                            inputmode="numeric">
                        </div>
                    </div>
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="lpa-statement-due-date-month">Month</label>
                            <input class="govuk-input govuk-date-input__input govuk-input--width-2"
                            id="lpa-statement-due-date-month" name="lpa-statement-due-date-month" type="text"
                            inputmode="numeric">
                        </div>
                    </div>
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="lpa-statement-due-date-year">Year</label>
                            <input class="govuk-input govuk-date-input__input govuk-input--width-4"
                            id="lpa-statement-due-date-year" name="lpa-statement-due-date-year" type="text"
                            inputmode="numeric">
                        </div>
                    </div>
                </div>
            </fieldset>
        </div>
        <div class="govuk-form-group">
            <fieldset class="govuk-fieldset" role="group" aria-describedby="ip-comments-due-date-hint">
                <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">Interested party comments due</legend>
                <div id="ip-comments-due-date-hint"
                class="govuk-hint">For example, 27 3 2007</div>
                <div class="govuk-date-input" id="ip-comments-due-date">
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="ip-comments-due-date-day">Day</label>
                            <input class="govuk-input govuk-date-input__input govuk-input--width-2"
                            id="ip-comments-due-date-day" name="ip-comments-due-date-day" type="text"
                            inputmode="numeric">
                        </div>
                    </div>
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="ip-comments-due-date-month">Month</label>
                            <input class="govuk-input govuk-date-input__input govuk-input--width-2"
                            id="ip-comments-due-date-month" name="ip-comments-due-date-month" type="text"
                            inputmode="numeric">
                        </div>
                    </div>
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="ip-comments-due-date-year">Year</label>
                            <input class="govuk-input govuk-date-input__input govuk-input--width-4"
                            id="ip-comments-due-date-year" name="ip-comments-due-date-year" type="text"
                            inputmode="numeric">
                        </div>
                    </div>
                </div>
            </fieldset>
        </div>
        <div class="govuk-form-group">
            <fieldset class="govuk-fieldset" role="group" aria-describedby="final-comments-due-date-hint">
                <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">Final comments due</legend>
                <div id="final-comments-due-date-hint" class="govuk-hint">For example, 27 3 2007</div>
                <div class="govuk-date-input" id="final-comments-due-date">
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="final-comments-due-date-day">Day</label>
                            <input class="govuk-input govuk-date-input__input govuk-input--width-2"
                            id="final-comments-due-date-day" name="final-comments-due-date-day" type="text"
                            inputmode="numeric">
                        </div>
                    </div>
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="final-comments-due-date-month">Month</label>
                            <input class="govuk-input govuk-date-input__input govuk-input--width-2"
                            id="final-comments-due-date-month" name="final-comments-due-date-month"
                            type="text" inputmode="numeric">
                        </div>
                    </div>
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="final-comments-due-date-year">Year</label>
                            <input class="govuk-input govuk-date-input__input govuk-input--width-4"
                            id="final-comments-due-date-year" name="final-comments-due-date-year" type="text"
                            inputmode="numeric">
                        </div>
                    </div>
                </div>
            </fieldset>
        </div>
        <div class="govuk-button-group">
            <button type="submit" class="govuk-button" data-module="govuk-button">Continue</button>
        </div>
    </form>
</main>"
`;

exports[`Appeal Timetables should render correct "Timetable due dates" page for S78 appeal type and status lpa_questionnaire and lpaq received 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Timetable due dates</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full"></div>
    </div>
    <form method="post" novalidate="novalidate">
        <div class="govuk-form-group">
            <fieldset class="govuk-fieldset" role="group" aria-describedby="lpa-statement-due-date-hint">
                <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">Statements due</legend>
                <div id="lpa-statement-due-date-hint" class="govuk-hint">For example, 27 3 2007</div>
                <div class="govuk-date-input" id="lpa-statement-due-date">
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="lpa-statement-due-date-day">Day</label>
                            <input class="govuk-input govuk-date-input__input govuk-input--width-2"
                            id="lpa-statement-due-date-day" name="lpa-statement-due-date-day" type="text"
                            inputmode="numeric">
                        </div>
                    </div>
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="lpa-statement-due-date-month">Month</label>
                            <input class="govuk-input govuk-date-input__input govuk-input--width-2"
                            id="lpa-statement-due-date-month" name="lpa-statement-due-date-month" type="text"
                            inputmode="numeric">
                        </div>
                    </div>
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="lpa-statement-due-date-year">Year</label>
                            <input class="govuk-input govuk-date-input__input govuk-input--width-4"
                            id="lpa-statement-due-date-year" name="lpa-statement-due-date-year" type="text"
                            inputmode="numeric">
                        </div>
                    </div>
                </div>
            </fieldset>
        </div>
        <div class="govuk-form-group">
            <fieldset class="govuk-fieldset" role="group" aria-describedby="ip-comments-due-date-hint">
                <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">Interested party comments due</legend>
                <div id="ip-comments-due-date-hint"
                class="govuk-hint">For example, 27 3 2007</div>
                <div class="govuk-date-input" id="ip-comments-due-date">
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="ip-comments-due-date-day">Day</label>
                            <input class="govuk-input govuk-date-input__input govuk-input--width-2"
                            id="ip-comments-due-date-day" name="ip-comments-due-date-day" type="text"
                            inputmode="numeric">
                        </div>
                    </div>
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="ip-comments-due-date-month">Month</label>
                            <input class="govuk-input govuk-date-input__input govuk-input--width-2"
                            id="ip-comments-due-date-month" name="ip-comments-due-date-month" type="text"
                            inputmode="numeric">
                        </div>
                    </div>
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="ip-comments-due-date-year">Year</label>
                            <input class="govuk-input govuk-date-input__input govuk-input--width-4"
                            id="ip-comments-due-date-year" name="ip-comments-due-date-year" type="text"
                            inputmode="numeric">
                        </div>
                    </div>
                </div>
            </fieldset>
        </div>
        <div class="govuk-form-group">
            <fieldset class="govuk-fieldset" role="group" aria-describedby="final-comments-due-date-hint">
                <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">Final comments due</legend>
                <div id="final-comments-due-date-hint" class="govuk-hint">For example, 27 3 2007</div>
                <div class="govuk-date-input" id="final-comments-due-date">
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="final-comments-due-date-day">Day</label>
                            <input class="govuk-input govuk-date-input__input govuk-input--width-2"
                            id="final-comments-due-date-day" name="final-comments-due-date-day" type="text"
                            inputmode="numeric">
                        </div>
                    </div>
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="final-comments-due-date-month">Month</label>
                            <input class="govuk-input govuk-date-input__input govuk-input--width-2"
                            id="final-comments-due-date-month" name="final-comments-due-date-month"
                            type="text" inputmode="numeric">
                        </div>
                    </div>
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="final-comments-due-date-year">Year</label>
                            <input class="govuk-input govuk-date-input__input govuk-input--width-4"
                            id="final-comments-due-date-year" name="final-comments-due-date-year" type="text"
                            inputmode="numeric">
                        </div>
                    </div>
                </div>
            </fieldset>
        </div>
        <div class="govuk-button-group">
            <button type="submit" class="govuk-button" data-module="govuk-button">Continue</button>
        </div>
    </form>
</main>"
`;

exports[`Appeal Timetables should render correct "Timetable due dates" page for S78 appeal type and status statements 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Timetable due dates</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full"></div>
    </div>
    <form method="post" novalidate="novalidate">
        <div class="govuk-form-group">
            <fieldset class="govuk-fieldset" role="group" aria-describedby="lpa-statement-due-date-hint">
                <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">Statements due</legend>
                <div id="lpa-statement-due-date-hint" class="govuk-hint">For example, 27 3 2007</div>
                <div class="govuk-date-input" id="lpa-statement-due-date">
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="lpa-statement-due-date-day">Day</label>
                            <input class="govuk-input govuk-date-input__input govuk-input--width-2"
                            id="lpa-statement-due-date-day" name="lpa-statement-due-date-day" type="text"
                            inputmode="numeric">
                        </div>
                    </div>
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="lpa-statement-due-date-month">Month</label>
                            <input class="govuk-input govuk-date-input__input govuk-input--width-2"
                            id="lpa-statement-due-date-month" name="lpa-statement-due-date-month" type="text"
                            inputmode="numeric">
                        </div>
                    </div>
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="lpa-statement-due-date-year">Year</label>
                            <input class="govuk-input govuk-date-input__input govuk-input--width-4"
                            id="lpa-statement-due-date-year" name="lpa-statement-due-date-year" type="text"
                            inputmode="numeric">
                        </div>
                    </div>
                </div>
            </fieldset>
        </div>
        <div class="govuk-form-group">
            <fieldset class="govuk-fieldset" role="group" aria-describedby="ip-comments-due-date-hint">
                <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">Interested party comments due</legend>
                <div id="ip-comments-due-date-hint"
                class="govuk-hint">For example, 27 3 2007</div>
                <div class="govuk-date-input" id="ip-comments-due-date">
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="ip-comments-due-date-day">Day</label>
                            <input class="govuk-input govuk-date-input__input govuk-input--width-2"
                            id="ip-comments-due-date-day" name="ip-comments-due-date-day" type="text"
                            inputmode="numeric">
                        </div>
                    </div>
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="ip-comments-due-date-month">Month</label>
                            <input class="govuk-input govuk-date-input__input govuk-input--width-2"
                            id="ip-comments-due-date-month" name="ip-comments-due-date-month" type="text"
                            inputmode="numeric">
                        </div>
                    </div>
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="ip-comments-due-date-year">Year</label>
                            <input class="govuk-input govuk-date-input__input govuk-input--width-4"
                            id="ip-comments-due-date-year" name="ip-comments-due-date-year" type="text"
                            inputmode="numeric">
                        </div>
                    </div>
                </div>
            </fieldset>
        </div>
        <div class="govuk-form-group">
            <fieldset class="govuk-fieldset" role="group" aria-describedby="final-comments-due-date-hint">
                <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">Final comments due</legend>
                <div id="final-comments-due-date-hint" class="govuk-hint">For example, 27 3 2007</div>
                <div class="govuk-date-input" id="final-comments-due-date">
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="final-comments-due-date-day">Day</label>
                            <input class="govuk-input govuk-date-input__input govuk-input--width-2"
                            id="final-comments-due-date-day" name="final-comments-due-date-day" type="text"
                            inputmode="numeric">
                        </div>
                    </div>
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="final-comments-due-date-month">Month</label>
                            <input class="govuk-input govuk-date-input__input govuk-input--width-2"
                            id="final-comments-due-date-month" name="final-comments-due-date-month"
                            type="text" inputmode="numeric">
                        </div>
                    </div>
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="final-comments-due-date-year">Year</label>
                            <input class="govuk-input govuk-date-input__input govuk-input--width-4"
                            id="final-comments-due-date-year" name="final-comments-due-date-year" type="text"
                            inputmode="numeric">
                        </div>
                    </div>
                </div>
            </fieldset>
        </div>
        <div class="govuk-button-group">
            <button type="submit" class="govuk-button" data-module="govuk-button">Continue</button>
        </div>
    </form>
</main>"
`;

exports[`Appeal Timetables should render correct "Timetable due dates" page for S78 appeal type and status final_comments 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Timetable due dates</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full"></div>
    </div>
    <form method="post" novalidate="novalidate">
        <div class="govuk-form-group">
            <fieldset class="govuk-fieldset" role="group" aria-describedby="final-comments-due-date-hint">
                <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">Final comments due</legend>
                <div id="final-comments-due-date-hint" class="govuk-hint">For example, 27 3 2007</div>
                <div class="govuk-date-input" id="final-comments-due-date">
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="final-comments-due-date-day">Day</label>
                            <input class="govuk-input govuk-date-input__input govuk-input--width-2"
                            id="final-comments-due-date-day" name="final-comments-due-date-day" type="text"
                            inputmode="numeric">
                        </div>
                    </div>
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="final-comments-due-date-month">Month</label>
                            <input class="govuk-input govuk-date-input__input govuk-input--width-2"
                            id="final-comments-due-date-month" name="final-comments-due-date-month"
                            type="text" inputmode="numeric">
                        </div>
                    </div>
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="final-comments-due-date-year">Year</label>
                            <input class="govuk-input govuk-date-input__input govuk-input--width-4"
                            id="final-comments-due-date-year" name="final-comments-due-date-year" type="text"
                            inputmode="numeric">
                        </div>
                    </div>
                </div>
            </fieldset>
        </div>
        <div class="govuk-button-group">
            <button type="submit" class="govuk-button" data-module="govuk-button">Continue</button>
        </div>
    </form>
</main>"
`;

exports[`Appeal Timetables should render correct "Timetable due dates" page for S78 appeal type and status lpa_questionnaire and lpaq received 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Timetable due dates</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full"></div>
    </div>
    <form method="post" novalidate="novalidate">
        <div class="govuk-form-group">
            <fieldset class="govuk-fieldset" role="group" aria-describedby="lpa-statement-due-date-hint">
                <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">Statements due</legend>
                <div id="lpa-statement-due-date-hint" class="govuk-hint">For example, 27 3 2007</div>
                <div class="govuk-date-input" id="lpa-statement-due-date">
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="lpa-statement-due-date-day">Day</label>
                            <input class="govuk-input govuk-date-input__input govuk-input--width-2"
                            id="lpa-statement-due-date-day" name="lpa-statement-due-date-day" type="text"
                            inputmode="numeric">
                        </div>
                    </div>
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="lpa-statement-due-date-month">Month</label>
                            <input class="govuk-input govuk-date-input__input govuk-input--width-2"
                            id="lpa-statement-due-date-month" name="lpa-statement-due-date-month" type="text"
                            inputmode="numeric">
                        </div>
                    </div>
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="lpa-statement-due-date-year">Year</label>
                            <input class="govuk-input govuk-date-input__input govuk-input--width-4"
                            id="lpa-statement-due-date-year" name="lpa-statement-due-date-year" type="text"
                            inputmode="numeric">
                        </div>
                    </div>
                </div>
            </fieldset>
        </div>
        <div class="govuk-form-group">
            <fieldset class="govuk-fieldset" role="group" aria-describedby="ip-comments-due-date-hint">
                <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">Interested party comments due</legend>
                <div id="ip-comments-due-date-hint"
                class="govuk-hint">For example, 27 3 2007</div>
                <div class="govuk-date-input" id="ip-comments-due-date">
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="ip-comments-due-date-day">Day</label>
                            <input class="govuk-input govuk-date-input__input govuk-input--width-2"
                            id="ip-comments-due-date-day" name="ip-comments-due-date-day" type="text"
                            inputmode="numeric">
                        </div>
                    </div>
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="ip-comments-due-date-month">Month</label>
                            <input class="govuk-input govuk-date-input__input govuk-input--width-2"
                            id="ip-comments-due-date-month" name="ip-comments-due-date-month" type="text"
                            inputmode="numeric">
                        </div>
                    </div>
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="ip-comments-due-date-year">Year</label>
                            <input class="govuk-input govuk-date-input__input govuk-input--width-4"
                            id="ip-comments-due-date-year" name="ip-comments-due-date-year" type="text"
                            inputmode="numeric">
                        </div>
                    </div>
                </div>
            </fieldset>
        </div>
        <div class="govuk-form-group">
            <fieldset class="govuk-fieldset" role="group" aria-describedby="final-comments-due-date-hint">
                <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">Final comments due</legend>
                <div id="final-comments-due-date-hint" class="govuk-hint">For example, 27 3 2007</div>
                <div class="govuk-date-input" id="final-comments-due-date">
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="final-comments-due-date-day">Day</label>
                            <input class="govuk-input govuk-date-input__input govuk-input--width-2"
                            id="final-comments-due-date-day" name="final-comments-due-date-day" type="text"
                            inputmode="numeric">
                        </div>
                    </div>
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="final-comments-due-date-month">Month</label>
                            <input class="govuk-input govuk-date-input__input govuk-input--width-2"
                            id="final-comments-due-date-month" name="final-comments-due-date-month"
                            type="text" inputmode="numeric">
                        </div>
                    </div>
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="final-comments-due-date-year">Year</label>
                            <input class="govuk-input govuk-date-input__input govuk-input--width-4"
                            id="final-comments-due-date-year" name="final-comments-due-date-year" type="text"
                            inputmode="numeric">
                        </div>
                    </div>
                </div>
            </fieldset>
        </div>
        <div class="govuk-button-group">
            <button type="submit" class="govuk-button" data-module="govuk-button">Continue</button>
        </div>
    </form>
</main>"
`;

exports[`Appeal Timetables should render correct "Timetable due dates" page for S78 appeal type and status statements 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Timetable due dates</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full"></div>
    </div>
    <form method="post" novalidate="novalidate">
        <div class="govuk-form-group">
            <fieldset class="govuk-fieldset" role="group" aria-describedby="lpa-statement-due-date-hint">
                <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">Statements due</legend>
                <div id="lpa-statement-due-date-hint" class="govuk-hint">For example, 27 3 2007</div>
                <div class="govuk-date-input" id="lpa-statement-due-date">
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="lpa-statement-due-date-day">Day</label>
                            <input class="govuk-input govuk-date-input__input govuk-input--width-2"
                            id="lpa-statement-due-date-day" name="lpa-statement-due-date-day" type="text"
                            inputmode="numeric">
                        </div>
                    </div>
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="lpa-statement-due-date-month">Month</label>
                            <input class="govuk-input govuk-date-input__input govuk-input--width-2"
                            id="lpa-statement-due-date-month" name="lpa-statement-due-date-month" type="text"
                            inputmode="numeric">
                        </div>
                    </div>
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="lpa-statement-due-date-year">Year</label>
                            <input class="govuk-input govuk-date-input__input govuk-input--width-4"
                            id="lpa-statement-due-date-year" name="lpa-statement-due-date-year" type="text"
                            inputmode="numeric">
                        </div>
                    </div>
                </div>
            </fieldset>
        </div>
        <div class="govuk-form-group">
            <fieldset class="govuk-fieldset" role="group" aria-describedby="ip-comments-due-date-hint">
                <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">Interested party comments due</legend>
                <div id="ip-comments-due-date-hint"
                class="govuk-hint">For example, 27 3 2007</div>
                <div class="govuk-date-input" id="ip-comments-due-date">
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="ip-comments-due-date-day">Day</label>
                            <input class="govuk-input govuk-date-input__input govuk-input--width-2"
                            id="ip-comments-due-date-day" name="ip-comments-due-date-day" type="text"
                            inputmode="numeric">
                        </div>
                    </div>
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="ip-comments-due-date-month">Month</label>
                            <input class="govuk-input govuk-date-input__input govuk-input--width-2"
                            id="ip-comments-due-date-month" name="ip-comments-due-date-month" type="text"
                            inputmode="numeric">
                        </div>
                    </div>
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="ip-comments-due-date-year">Year</label>
                            <input class="govuk-input govuk-date-input__input govuk-input--width-4"
                            id="ip-comments-due-date-year" name="ip-comments-due-date-year" type="text"
                            inputmode="numeric">
                        </div>
                    </div>
                </div>
            </fieldset>
        </div>
        <div class="govuk-form-group">
            <fieldset class="govuk-fieldset" role="group" aria-describedby="final-comments-due-date-hint">
                <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">Final comments due</legend>
                <div id="final-comments-due-date-hint" class="govuk-hint">For example, 27 3 2007</div>
                <div class="govuk-date-input" id="final-comments-due-date">
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="final-comments-due-date-day">Day</label>
                            <input class="govuk-input govuk-date-input__input govuk-input--width-2"
                            id="final-comments-due-date-day" name="final-comments-due-date-day" type="text"
                            inputmode="numeric">
                        </div>
                    </div>
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="final-comments-due-date-month">Month</label>
                            <input class="govuk-input govuk-date-input__input govuk-input--width-2"
                            id="final-comments-due-date-month" name="final-comments-due-date-month"
                            type="text" inputmode="numeric">
                        </div>
                    </div>
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="final-comments-due-date-year">Year</label>
                            <input class="govuk-input govuk-date-input__input govuk-input--width-4"
                            id="final-comments-due-date-year" name="final-comments-due-date-year" type="text"
                            inputmode="numeric">
                        </div>
                    </div>
                </div>
            </fieldset>
        </div>
        <div class="govuk-button-group">
            <button type="submit" class="govuk-button" data-module="govuk-button">Continue</button>
        </div>
    </form>
</main>"
`;
